Add quay.io:443 pull secret to OCP global pull secret
Signed-off-by: Philip Wu <phwu@redhat.com>

--- a/hypershift-pipelines/pipeline_downstream.yaml
+++ b/hypershift-pipelines/pipeline_downstream.yaml
@@ -126,6 +126,8 @@ spec:
       value: $(params.namespace)
     - name: snapshot
       value: "$(params.snapshot)"
+    - name: imagePullSecret
+      value: "$(tasks.checkout-hub-cluster.results.imagePullSecret)"      
     runAfter:
     - ensure-acm-prereqs
     taskRef:
