--- a/hypershift-pipelines/task_applyHypershiftDeployment.yaml
+++ b/hypershift-pipelines/task_applyHypershiftDeployment.yaml
@@ -31,10 +31,11 @@ spec:
 
       oc project multicluster-engine
       oc create ns clusters || true
+      HD_NAME="$(inputs.params.targetManagedCluster)-hd"
       _TEMPLATE="apiVersion: cluster.open-cluster-management.io/v1alpha1
       kind: HypershiftDeployment
       metadata:
-        name: $(inputs.params.targetManagedCluster)-hd
+        name: $HD_NAME
         namespace: $(inputs.params.targetManagedCluster)
       spec:
         hostingCluster: $(inputs.params.targetManagedCluster)
@@ -86,7 +87,7 @@ spec:
 
       if [[ "$(inputs.params.targetManagedCluster)" == "local-cluster" ]]; then
         _ATTEMPTS=0
-        until oc get hostedcluster $(inputs.params.targetManagedCluster)-hd -n $(inputs.params.targetManagedCluster);
+        until oc get hostedcluster $HD_NAME -n $(inputs.params.targetManagedCluster);
         do 
             echo "$_ATTEMPTS/10: Waiting for HostedCluster to be deployed from HyperShiftDeployment"
             _ATTEMPTS=$((_ATTEMPTS + 1))
@@ -100,7 +101,7 @@ spec:
         echo "Validating HostedCluster on hub cluster 'local-cluster' ..."
         _ATTEMPTS=0
         echo "Waiting for HostedCluster deployment to complete ..."
-        until oc get hostedcluster -n $(inputs.params.targetManagedCluster) $(inputs.params.targetManagedCluster)-hd -o yaml | yq eval '.status.version.history.[0].state' - | grep "Completed";
+        until oc get hostedcluster -n $(inputs.params.targetManagedCluster) $HD_NAME -o yaml | yq eval '.status.version.history.[0].state' - | grep "Completed";
         do 
             echo "$_ATTEMPTS/30: Waiting for HostedCluster deployment to be complete... Sleeping 1 min"
             _ATTEMPTS=$((_ATTEMPTS + 1))
@@ -116,7 +117,7 @@ spec:
       echo "Validating HostedCluster created ManagedCluster on hub cluster ..."
         _ATTEMPTS=0
         echo "Waiting for ManagedCluster to be created ..."
-        until oc get managedcluster | grep "$(inputs.params.targetManagedCluster)-hd";
+        until oc get managedcluster | grep "$HD_NAME";
         do 
             echo "$_ATTEMPTS/10: Waiting for HostedCluster ManagedCluster to be available... Sleeping 1 min"
             _ATTEMPTS=$((_ATTEMPTS + 1))
