Switch to ACM 2.7
Signed-off-by: Philip Wu <phwu@redhat.com>

--- a/hypershift-pipelines/pipeline_downstream.yaml
+++ b/hypershift-pipelines/pipeline_downstream.yaml
@@ -169,7 +169,7 @@ spec:
       value: "$(tasks.ensure-hypershiftdeployment-hub.results.hdStatus)"              
     taskRef:
       kind: Task
-      name: notify-status
+      name: notify-status-ds
     workspaces:
     - name: source
       workspace: shared-workspace     
