--- a/hypershift-pipelines/pipelinerun/template-upgrade.yaml
+++ b/hypershift-pipelines/pipelinerun/template-upgrade.yaml
@@ -1,7 +1,7 @@
 apiVersion: triggers.tekton.dev/v1alpha1
 kind: TriggerTemplate
 metadata:
-  name: hs-ci-trigger-pipeline-template
+  name: hs-ci-ds-upgrade-trigger-pipeline-template
 spec:
   params:
   - name: acmbuild
@@ -10,26 +10,28 @@ spec:
   - apiVersion: tekton.dev/v1beta1
     kind: PipelineRun
     metadata:
-      generateName: hs-ci-daily-build
+      generateName: hs-ci-upgrade-daily-build
     spec:
       serviceAccountName: pipeline
       pipelineRef:
-        name: deploy-upstream-acm-and-hypershift-deployment-ds
+        name: deploy-downstream-acm-26-upgrade-27
       params:
         - name: clusterPoolName
           value: hypershift-ci-cluster-pool2
         - name: clusterClaimName
-          value: hs-ci-us-cluster
+          value: hs-ci-upgrade-cluster
         - name: clusterClaimLifetime
           value: 11h
         - name: namespace
           value: open-cluster-management
         - name: snapshot
+          value: 2.6.4-DOWNSTREAM-2023-01-12-23-24-24
+        - name: targetSnapshot
           value: $(tt.params.acmbuild)
         - name: sendNotification
           value: "true"
-      timeout: 1h30m0s
+      timeout: 2h00m0s
       workspaces:
         - name: shared-workspace
           persistentVolumeClaim:
-            claimName: hs-ws-claim
+            claimName: hs-ds-ws-claim
