--- a/hypershift-pipelines/pipeline_downstream_27.yaml
+++ b/hypershift-pipelines/pipeline_downstream_27.yaml
@@ -7,7 +7,7 @@ spec:
     - name: clusterPoolName
       type: string
       description: The name of the clusterpool to use
-      default: "hypershift-ci"
+      default: "hypershift-ci-pool"
     - name: clusterClaimName
       type: string
       description: The name of the clusterclaim to claim
@@ -32,7 +32,7 @@ spec:
     - name: fetch-repo-samples
       params:
         - name: url
-          value: https://github.com/philipwu08/openshift-pipelines.git
+          value: https://github.com/stolostron/hypershift-pipelines.git
         - name: revision
           value: main
         - name: deleteExisting
@@ -166,7 +166,7 @@ spec:
         - name: mchStatus
           value: "$(tasks.ensure-mch.status)"
         - name: hubHd
-          value: "$(tasks.ensure-hypershiftdeployment-hub.results.hdStatus)"
+          value: "$(tasks.create-hosted-cluster.results.hdStatus)"
       taskRef:
         kind: Task
         name: notify-status-ds
