--- a/pipelinerun/eventlistener-ds.yaml
+++ b/pipelinerun/eventlistener-ds.yaml
@@ -1,11 +1,11 @@
 apiVersion: triggers.tekton.dev/v1alpha1
 kind: EventListener
 metadata:
- name: hs-ci-ds-github-listener
+ name: hs-ci-ds-github-listener-test # -test to differentiate from "hs-ci-ds-github-listener", will change later
 spec:
  serviceAccountName: pipeline
  triggers:
    - bindings:
-       - ref: hs-ci-pipeline-binding
+       - ref: hs-ci-ds-pipeline-binding
      template:
        ref: hs-ci-ds-trigger-pipeline-template
