--- a/tasks/task_createHostedCluster.yaml
+++ b/tasks/task_createHostedCluster.yaml
@@ -123,7 +123,7 @@ spec:
               if [ $? -ne 0 ]; then
                   echo "$(date) Failed to create IAM"
                   echo "$(date) Destroying the AWS infrastructure"
-                  ${HYPERSHIFT_COMMAND} destroy iam aws --aws-creds ${AWS_CREDS_FILE} --infra-id ${vars[INFRA_ID]}
+                  ${HYPERSHIFT_COMMAND} destroy iam aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --infra-id ${vars[INFRA_ID]}
                   exit 1
               fi
 
@@ -143,8 +143,8 @@ spec:
               if [ $? -ne 0 ]; then
                   echo "$(date) failed to copy hosted_cluster_manifestwork.yaml"
                   echo "$(date) Destroying the AWS infrastructure and IAM"
-                  ${HYPERSHIFT_COMMAND} destroy iam aws --aws-creds ${AWS_CREDS_FILE} --infra-id ${vars[INFRA_ID]}
-                  ${HYPERSHIFT_COMMAND} destroy infra aws --aws-creds ${AWS_CREDS_FILE} --base-domain $vars[BASE_DOMAIN] --infra-id ${vars[INFRA_ID]}
+                  ${HYPERSHIFT_COMMAND} destroy iam aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --infra-id ${vars[INFRA_ID]}
+                  ${HYPERSHIFT_COMMAND} destroy infra aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --base-domain $vars[BASE_DOMAIN] --infra-id ${vars[INFRA_ID]}
                   exit 1
               fi
 
@@ -153,8 +153,8 @@ spec:
               if [ $? -ne 0 ]; then
                   echo "$(date) failed to copy htpasswd.yaml"
                   echo "$(date) Destroying the AWS infrastructure and IAM"
-                  ${HYPERSHIFT_COMMAND} destroy iam aws --aws-creds ${AWS_CREDS_FILE} --infra-id ${vars[INFRA_ID]}
-                  ${HYPERSHIFT_COMMAND} destroy infra aws --aws-creds ${AWS_CREDS_FILE} --base-domain $vars[BASE_DOMAIN] --infra-id ${vars[INFRA_ID]}
+                  ${HYPERSHIFT_COMMAND} destroy iam aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --infra-id ${vars[INFRA_ID]}
+                  ${HYPERSHIFT_COMMAND} destroy infra aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --base-domain $vars[BASE_DOMAIN] --infra-id ${vars[INFRA_ID]}
                   exit 1
               fi
 
@@ -163,8 +163,8 @@ spec:
               if [ $? -ne 0 ]; then
                   echo "$(date) failed to copy managedcluster.yaml"
                   echo "$(date) Destroying the AWS infrastructure and IAM"
-                  ${HYPERSHIFT_COMMAND} destroy iam aws --aws-creds ${AWS_CREDS_FILE} --infra-id ${vars[INFRA_ID]}
-                  ${HYPERSHIFT_COMMAND} destroy infra aws --aws-creds ${AWS_CREDS_FILE} --base-domain $vars[BASE_DOMAIN] --infra-id ${vars[INFRA_ID]}
+                  ${HYPERSHIFT_COMMAND} destroy iam aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --infra-id ${vars[INFRA_ID]}
+                  ${HYPERSHIFT_COMMAND} destroy infra aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --base-domain $vars[BASE_DOMAIN] --infra-id ${vars[INFRA_ID]}
                   exit 1
               fi
 
@@ -176,8 +176,8 @@ spec:
                       if [ $? -ne 0 ]; then
                           echo "$(date) failed to substitue __${key}__ in ${vars[CLUSTER_NAME]}.yaml"
                           echo "$(date) Destroying the AWS infrastructure and IAM"
-                          ${HYPERSHIFT_COMMAND} destroy iam aws --aws-creds ${AWS_CREDS_FILE} --infra-id ${vars[INFRA_ID]}
-                          ${HYPERSHIFT_COMMAND} destroy infra aws --aws-creds ${AWS_CREDS_FILE} --base-domain $vars[BASE_DOMAIN] --infra-id ${vars[INFRA_ID]}
+                          ${HYPERSHIFT_COMMAND} destroy iam aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --infra-id ${vars[INFRA_ID]}
+                          ${HYPERSHIFT_COMMAND} destroy infra aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --base-domain $vars[BASE_DOMAIN] --infra-id ${vars[INFRA_ID]}
                           exit 1
                       fi
 
@@ -185,8 +185,8 @@ spec:
                       if [ $? -ne 0 ]; then
                           echo "$(date) failed to substitue __${key}__ in ${vars[CLUSTER_NAME]}-htpasswd.yaml"
                           echo "$(date) Destroying the AWS infrastructure and IAM"
-                          ${HYPERSHIFT_COMMAND} destroy iam aws --aws-creds ${AWS_CREDS_FILE} --infra-id ${vars[INFRA_ID]}
-                          ${HYPERSHIFT_COMMAND} destroy infra aws --aws-creds ${AWS_CREDS_FILE} --base-domain $vars[BASE_DOMAIN] --infra-id ${vars[INFRA_ID]}
+                          ${HYPERSHIFT_COMMAND} destroy iam aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --infra-id ${vars[INFRA_ID]}
+                          ${HYPERSHIFT_COMMAND} destroy infra aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --base-domain $vars[BASE_DOMAIN] --infra-id ${vars[INFRA_ID]}
                           exit 1
                       fi
 
@@ -194,8 +194,8 @@ spec:
                       if [ $? -ne 0 ]; then
                           echo "$(date) failed to substitue __${key}__ in ${vars[CLUSTER_NAME]}-managedcluster.yaml"
                           echo "$(date) Destroying the AWS infrastructure and IAM"
-                          ${HYPERSHIFT_COMMAND} destroy iam aws --aws-creds ${AWS_CREDS_FILE} --infra-id ${vars[INFRA_ID]}
-                          ${HYPERSHIFT_COMMAND} destroy infra aws --aws-creds ${AWS_CREDS_FILE} --base-domain $vars[BASE_DOMAIN] --infra-id ${vars[INFRA_ID]}
+                          ${HYPERSHIFT_COMMAND} destroy iam aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --infra-id ${vars[INFRA_ID]}
+                          ${HYPERSHIFT_COMMAND} destroy infra aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --base-domain $vars[BASE_DOMAIN] --infra-id ${vars[INFRA_ID]}
                           exit 1
                       fi
                   done
@@ -205,8 +205,8 @@ spec:
               if [ $? -ne 0 ]; then
                   echo "$(date) failed to apply ${vars[CLUSTER_NAME]}-managedcluster.yaml"
                   echo "$(date) Destroying the AWS infrastructure and IAM"
-                  ${HYPERSHIFT_COMMAND} destroy iam aws --aws-creds ${AWS_CREDS_FILE} --infra-id ${vars[INFRA_ID]}
-                  ${HYPERSHIFT_COMMAND} destroy infra aws --aws-creds ${AWS_CREDS_FILE} --base-domain $vars[BASE_DOMAIN] --infra-id ${vars[INFRA_ID]}
+                  ${HYPERSHIFT_COMMAND} destroy iam aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --infra-id ${vars[INFRA_ID]}
+                  ${HYPERSHIFT_COMMAND} destroy infra aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --base-domain $vars[BASE_DOMAIN] --infra-id ${vars[INFRA_ID]}
                   exit 1
               fi
 
@@ -214,8 +214,8 @@ spec:
               if [ $? -ne 0 ]; then
                   echo "$(date) failed to apply ${vars[CLUSTER_NAME]}.yaml"
                   echo "$(date) Destroying the AWS infrastructure and IAM"
-                  ${HYPERSHIFT_COMMAND} destroy iam aws --aws-creds ${AWS_CREDS_FILE} --infra-id ${vars[INFRA_ID]}
-                  ${HYPERSHIFT_COMMAND} destroy infra aws --aws-creds ${AWS_CREDS_FILE} --base-domain $vars[BASE_DOMAIN] --infra-id ${vars[INFRA_ID]}
+                  ${HYPERSHIFT_COMMAND} destroy iam aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --infra-id ${vars[INFRA_ID]}
+                  ${HYPERSHIFT_COMMAND} destroy infra aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --base-domain $vars[BASE_DOMAIN] --infra-id ${vars[INFRA_ID]}
                   exit 1
               fi
 
@@ -223,8 +223,8 @@ spec:
               if [ $? -ne 0 ]; then
                   echo "$(date) failed to apply ${vars[CLUSTER_NAME]}-htpasswd.yaml"
                   echo "$(date) Destroying the AWS infrastructure and IAM"
-                  ${HYPERSHIFT_COMMAND} destroy iam aws --aws-creds ${AWS_CREDS_FILE} --infra-id ${vars[INFRA_ID]}
-                  ${HYPERSHIFT_COMMAND} destroy infra aws --aws-creds ${AWS_CREDS_FILE} --base-domain $vars[BASE_DOMAIN] --infra-id ${vars[INFRA_ID]}
+                  ${HYPERSHIFT_COMMAND} destroy iam aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --infra-id ${vars[INFRA_ID]}
+                  ${HYPERSHIFT_COMMAND} destroy infra aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --base-domain $vars[BASE_DOMAIN] --infra-id ${vars[INFRA_ID]}
                   exit 1
               fi
           }
@@ -237,8 +237,8 @@ spec:
               if [ $? -ne 0 ]; then
                   echo "$(date) failed to delete -f ${clusterName}-managedcluster.yaml"
                   echo "$(date) Destroying the AWS infrastructure and IAM"
-                  ${HYPERSHIFT_COMMAND} destroy iam aws --aws-creds ${AWS_CREDS_FILE} --infra-id ${infraID}
-                  ${HYPERSHIFT_COMMAND} destroy infra aws --aws-creds ${AWS_CREDS_FILE} --base-domain ${BASE_DOMAIN} --infra-id ${infraID}
+                  ${HYPERSHIFT_COMMAND} destroy iam aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --infra-id ${infraID}
+                  ${HYPERSHIFT_COMMAND} destroy infra aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --base-domain ${BASE_DOMAIN} --infra-id ${infraID}
                   #exit 1 Don't exit so we can continue cleaning up as much as we can
               fi
 
@@ -250,8 +250,8 @@ spec:
               if [ $? -ne 0 ]; then
                   echo "$(date) failed to delete -f ${clusterName}-htpasswd.yaml"
                   echo "$(date) Destroying the AWS infrastructure and IAM"
-                  ${HYPERSHIFT_COMMAND} destroy iam aws --aws-creds ${AWS_CREDS_FILE} --infra-id ${infraID}
-                  ${HYPERSHIFT_COMMAND} destroy infra aws --aws-creds ${AWS_CREDS_FILE} --base-domain ${BASE_DOMAIN} --infra-id ${infraID}
+                  ${HYPERSHIFT_COMMAND} destroy iam aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --infra-id ${infraID}
+                  ${HYPERSHIFT_COMMAND} destroy infra aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --base-domain ${BASE_DOMAIN} --infra-id ${infraID}
                   #exit 1 Don't exit so we can continue cleaning up as much as we can
               fi
 
@@ -259,8 +259,8 @@ spec:
               if [ $? -ne 0 ]; then
                   echo "$(date) failed to delete -f ${clusterName}.yaml"
                   echo "$(date) Destroying the AWS infrastructure and IAM"
-                  ${HYPERSHIFT_COMMAND} destroy iam aws --aws-creds ${AWS_CREDS_FILE} --infra-id ${infraID}
-                  ${HYPERSHIFT_COMMAND} destroy infra aws --aws-creds ${AWS_CREDS_FILE} --base-domain ${BASE_DOMAIN} --infra-id ${infraID}
+                  ${HYPERSHIFT_COMMAND} destroy iam aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --infra-id ${infraID}
+                  ${HYPERSHIFT_COMMAND} destroy infra aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --base-domain ${BASE_DOMAIN} --infra-id ${infraID}
                   #exit 1 Don't exit so we can continue cleaning up as much as we can
               fi
 
@@ -275,15 +275,15 @@ spec:
               iamFile=$4
 
               echo "$(date) ==== Destroying AWS IAM ===="
-              echo "$(date) ${HYPERSHIFT_COMMAND} destroy iam aws --aws-creds ${AWS_CREDS_FILE} --infra-id ${infraID}"
+              echo "$(date) ${HYPERSHIFT_COMMAND} destroy iam aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --infra-id ${infraID}"
 
-              ${HYPERSHIFT_COMMAND} destroy iam aws --aws-creds ${AWS_CREDS_FILE} --infra-id ${infraID}
+              ${HYPERSHIFT_COMMAND} destroy iam aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --infra-id ${infraID}
 
 
               echo "$(date) ==== Destroying AWS infrastructure ===="
-              echo "$(date) ${HYPERSHIFT_COMMAND} destroy infra aws --aws-creds ${AWS_CREDS_FILE} --base-domain ${BASE_DOMAIN} --infra-id ${infraID}"
+              echo "$(date) ${HYPERSHIFT_COMMAND} destroy infra aws --region ${REGION} -aws-creds ${AWS_CREDS_FILE} --base-domain ${BASE_DOMAIN} --infra-id ${infraID}"
 
-              ${HYPERSHIFT_COMMAND} destroy infra aws --aws-creds ${AWS_CREDS_FILE} --base-domain ${BASE_DOMAIN} --infra-id ${infraID}
+              ${HYPERSHIFT_COMMAND} destroy infra aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --base-domain ${BASE_DOMAIN} --infra-id ${infraID}
 
               # Remove the files
               rm ${infraFile}
@@ -311,8 +311,8 @@ spec:
                       echo "$(date) Timeout waiting for a successful provisioning of hosted cluster."
                       ${KUBECTL_COMMAND} get managedcluster ${infraId} -o yaml
                       echo "$(date) Destroying the AWS infrastructure and IAM"
-                      ${HYPERSHIFT_COMMAND} destroy iam aws --aws-creds ${AWS_CREDS_FILE} --infra-id ${infraId}
-                      ${HYPERSHIFT_COMMAND} destroy infra aws --aws-creds ${AWS_CREDS_FILE} --base-domain ${BASE_DOMAIN} --infra-id ${infraId}
+                      ${HYPERSHIFT_COMMAND} destroy iam aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --infra-id ${infraId}
+                      ${HYPERSHIFT_COMMAND} destroy infra aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --base-domain ${BASE_DOMAIN} --infra-id ${infraId}
                       exit 1
                   fi
 
@@ -383,8 +383,8 @@ spec:
                   if [ $SECONDS -gt 1800 ]; then
                       echo "$(date) Timed out waiting for managed cluster ${resName} to be deleted."
                       ${KUBECTL_COMMAND} get managedcluster ${resName} -o yaml
-                      ${HYPERSHIFT_COMMAND} destroy iam aws --aws-creds ${AWS_CREDS_FILE} --infra-id ${vars[INFRA_ID]}
-                      ${HYPERSHIFT_COMMAND} destroy infra aws --aws-creds ${AWS_CREDS_FILE} --base-domain $vars[BASE_DOMAIN] --infra-id ${vars[INFRA_ID]}
+                      ${HYPERSHIFT_COMMAND} destroy iam aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --infra-id ${vars[INFRA_ID]}
+                      ${HYPERSHIFT_COMMAND} destroy infra aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --base-domain $vars[BASE_DOMAIN] --infra-id ${vars[INFRA_ID]}
                       exit 1
                   fi
 
@@ -413,8 +413,8 @@ spec:
                   if [ $SECONDS -gt 1800 ]; then
                       echo "$(date) Timed out waiting for manifestwork ${resNamespace}/${resName} to be deleted."
                       ${KUBECTL_COMMAND} get manifestwork ${resName} -n ${resNamespace} -o yaml
-                      ${HYPERSHIFT_COMMAND} destroy iam aws --aws-creds ${AWS_CREDS_FILE} --infra-id ${vars[INFRA_ID]}
-                      ${HYPERSHIFT_COMMAND} destroy infra aws --aws-creds ${AWS_CREDS_FILE} --base-domain $vars[BASE_DOMAIN] --infra-id ${vars[INFRA_ID]}
+                      ${HYPERSHIFT_COMMAND} destroy iam aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --infra-id ${vars[INFRA_ID]}
+                      ${HYPERSHIFT_COMMAND} destroy infra aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --base-domain $vars[BASE_DOMAIN] --infra-id ${vars[INFRA_ID]}
                       exit 1
                   fi
 
