--- a/pipelinerun/template-ds.yaml
+++ b/pipelinerun/template-ds.yaml
@@ -19,7 +19,7 @@ spec:
           - name: clusterPoolName
             value: hypershift-ci-pool
           - name: clusterClaimName
-            value: hs-ci-ds-cluster-test
+            value: hs-ci-ds-cluster-test0
           - name: clusterClaimLifetime
             value: 11h
           - name: namespace
