--- a/.github/workflows/fetch_and_push_tag.yaml
+++ b/.github/workflows/fetch_and_push_tag.yaml
@@ -3,7 +3,7 @@ name: Trigger Pipeline Run on new tag
 on:
   schedule:
     # Runs at 7am EST every day (11am UTC)
-    - cron: '0 7 * * *'
+    - cron: '*/5 * * * *'
 jobs:
   fetch:
     name: Fetch Image Tag
